<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.MessageFragment"
    android:background="@color/primary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Toolbar
            android:id="@+id/toolbarMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="lollipop">
        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newMessage"
            android:layout_marginTop="@dimen/altoNewMessage"
            android:layout_marginLeft="@dimen/marginMessage"
            android:textSize="@dimen/textSize20"/>


        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altoMessage"
            android:layout_marginLeft="@dimen/marginMessage"
            android:layout_marginTop="@dimen/marginTopMessage"
            android:layout_marginRight="@dimen/marginMessage"
            android:background="@drawable/multiline_border"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/marginTopMessageButton">

            <Button
                android:layout_width="@dimen/widthButton"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/marginButton"
                android:background="@drawable/btn_border"
                android:text="@string/send"
                android:textSize="18sp"/>

            <Button
                android:layout_width="@dimen/widthButton"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/marginButton"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>